--- a/index.htm
+++ b/index.htm
@@ -76,7 +76,7 @@
             <h3>Professional Profile</h3>
             <p>With nearly 4 years working for different sectors of a Travel & Hospitality group, managing company brand, making and implementing marketing plan and creating communication collaterals, my skillset and experience in marketing and industrial profession and management have been sharpened readily for the next stride in my career path.<br>
             </p>
-            <a href="#" class="button">Download resume as PDF file</a> <img src="images/signature.jpg" class="signature" alt=""/> </div>
+            <a href="resume.pdf" class="button">Download resume as PDF file</a> <img src="images/signature.jpg" class="signature" alt=""/> </div>
         </div>
       </article>
       
