--- a/index.htm
+++ b/index.htm
@@ -275,7 +275,7 @@
                   <div class="col-6 margin-bottom50 margin-top50">
                     <div class="col-3 icon-block"><i class="fa fa-laptop"></i></div>
                     <div class="flot-left">
-                      <h5>Internaltional English Language Testing System (IELST)</h5>
+                      <h5>International English Language Testing System (IELST)</h5>
                       <span>2015 - 2017</span> </div>
                   </div>
                   <div class="col-6 margin-bottom50 margin-top50 no-margin-top">
